--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: "sunrise"
+search: true
+
+plugins:
+  - jekyll-datapage-generator
+
+page_gen:
+  - data: classes
+    name: name
+    template: class
+    dir: ""
