--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,17 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-# Build settings
+# Theme settings
 theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: "sunrise"
 search: true
 
+# General settings
+source: src
 plugins:
   - jekyll-datapage-generator
 
+# Page generator settings
 page_gen:
   - data: classes
     name: name
