--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -1,63 +1,63 @@
 main:
   - title: Rules
-    url: /rules/
+    url: /rules
   - title: Character
-    url: /character/
+    url: /character
   - title: Classes
-    url: /classes/
+    url: /classes
 
 classes:
   - title: Warrior
     children:
     - title: Acrobat
-      url: /Acrobat/
+      url: /Acrobat
     - title: Duelist
-      url: /Duelist/
+      url: /Duelist
     - title: Guardian
-      url: /Guardian/
+      url: /Guardian
     - title: Hunter
-      url: /Hunter/
+      url: /Hunter
     - title: Marauder
-      url: /Marauder/
+      url: /Marauder
     - title: Warblade
-      url: /Warblade/
+      url: /Warblade
   - title: Expert
     children:
     - title: Alchemist
-      url: /Alchemist/
+      url: /Alchemist
     - title: Bard
-      url: /Bard/
+      url: /Bard
     - title: Inventor
-      url: /Inventor/
+      url: /Inventor
     - title: Monk
-      url: /Monk/
+      url: /Monk
     - title: Rogue
-      url: /Rogue/
+      url: /Rogue
     - title: Strategist
-      url: /Strategist/
+      url: /Strategist
   - title: Mage
     children:
     - title: Arcanist
-      url: /Arcanist/
+      url: /Arcanist
     - title: Conjurer
-      url: /Conjurer/
+      url: /Conjurer
     - title: Diviner
-      url: /Diviner/
+      url: /Diviner
     - title: Druid
-      url: /Druid/
+      url: /Druid
     - title: Elementalist
-      url: /Elementalist/
+      url: /Elementalist
     - title: Enchanter
-      url: /Enchanter/
+      url: /Enchanter
     - title: Evoker
-      url: /Evoker/
+      url: /Evoker
     - title: Healer
-      url: /Healer/
+      url: /Healer
     - title: Illusionist
-      url: /Illusionist/
+      url: /Illusionist
     - title: Necromancer
-      url: /Necromancer/
+      url: /Necromancer
     - title: Sorcerer
-      url: /Sorcerer/
+      url: /Sorcerer
     - title: Transmuter
-      url: /Transmuter/
+      url: /Transmuter
