Fix navigation links

--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -10,54 +10,54 @@ classes:
   - title: Warrior
     children:
     - title: Acrobat
-      url: /Acrobat
+      url: /acrobat
     - title: Duelist
-      url: /Duelist
+      url: /duelist
     - title: Guardian
-      url: /Guardian
+      url: /guardian
     - title: Hunter
-      url: /Hunter
+      url: /hunter
     - title: Marauder
-      url: /Marauder
+      url: /marauder
     - title: Warblade
-      url: /Warblade
+      url: /warblade
   - title: Expert
     children:
     - title: Alchemist
-      url: /Alchemist
+      url: /alchemist
     - title: Bard
-      url: /Bard
+      url: /bard
     - title: Inventor
-      url: /Inventor
+      url: /inventor
     - title: Monk
-      url: /Monk
+      url: /monk
     - title: Rogue
-      url: /Rogue
+      url: /rogue
     - title: Strategist
-      url: /Strategist
+      url: /strategist
   - title: Mage
     children:
     - title: Arcanist
-      url: /Arcanist
+      url: /arcanist
     - title: Conjurer
-      url: /Conjurer
+      url: /conjurer
     - title: Diviner
-      url: /Diviner
+      url: /diviner
     - title: Druid
-      url: /Druid
+      url: /druid
     - title: Elementalist
-      url: /Elementalist
+      url: /elementalist
     - title: Enchanter
-      url: /Enchanter
+      url: /enchanter
     - title: Evoker
-      url: /Evoker
+      url: /evoker
     - title: Healer
-      url: /Healer
+      url: /healer
     - title: Illusionist
-      url: /Illusionist
+      url: /illusionist
     - title: Necromancer
-      url: /Necromancer
+      url: /necromancer
     - title: Sorcerer
-      url: /Sorcerer
+      url: /sorcerer
     - title: Transmuter
-      url: /Transmuter
+      url: /transmuter
